[package]
name = "mqtt2file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12.3", default-features = false, features = ["bundled"] }
log = "0.4.21"
env_logger = "0.10.2"
hostname = "0.4.0"
ctrlc = "3.4.4"
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
crossbeam-channel = "0.5.12"
